# sso-service

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose .yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  ruff.toml  test.py
docs/: api-design.txt
docs/clients/: README.md
docs/domain/: README.md  simple_user_auth.mmd  user_credentials_registration.mmd  user_cross_realms.mmd
docs/project/: README.md
docs/providers/: README.md  providers_auth.mmd
docs/users/: README.md
migration/: env.py
migration/versions/: 2025_08_02_1748-529a61ca637c_initial_revision.py  2025_08_07_2101-dddd5ce58a27_initial_revision.py  2025_08_07_2216-e5d66c0deef3_delete_field_already_seen_secret.py  2025_08_09_2121-37a12f0c4b77_initial_revision.py  2025_08_09_2124-c2c486104169_add_relation.py  2025_08_09_2138-9945bd8a0e43_add_password_column.py  2025_08_11_1244-a47f5364d3c9_initial_revision.py  2025_08_17_0047-3434f28d3efd_init.py  2025_08_21_1256-69bc82270195_initial_revision.py  2025_08_22_1624-8dd214d19a59_init.py
src/auth_service/: dependencies.py  security.py  services.py  settings.py  storage.py
src/auth_service/api/: app.py  schemas.py
src/auth_service/api/routers/: __init__.py
src/auth_service/api/routers/admin/: clients.py  realms.py
src/auth_service/api/routers/auth/: __init__.py  clients.py  realms.py  users.py
src/auth_service/core/: base.py  constants.py  domain.py  dto.py  enums.py  exceptions.py  schemas.py  utils.py
src/auth_service/database/: base.py  models.py  repository.py
src/sso_service/: dependencies.py  security.py  services.py  storage.py
src/sso_service/api/: schemas.py
src/sso_service/api/routers/: __init__.py  auth.py  clients.py  oauth.py  registration.py
src/sso_service/api/routers/admin/: __init__.py  clients.py  groups.py  providers.py  realms.py  users.py
src/sso_service/api/routers/auth/: clients.py  users.py
src/sso_service/core/: base.py  constants.py  domain.py  dto.py  enums.py  exceptions.py  utils.py
src/sso_service/database/: base.py  models.py  repository.py
sso_service/: dependencies.py  rest.py  security.py  services.py  settings.py  storage.py
sso_service/api/: app.py  schemas.py
sso_service/api/routers/: __init__.py  auth.py  oauth.py  registration.py
sso_service/api/routers/admin/: __init__.py  clients.py  groups.py  providers.py  realms.py  users.py
sso_service/api/routers/providers/: __init__.py  vk.py  yandex.py
sso_service/core/: base.py  constants.py  domain.py  enums.py  exceptions.py  utils.py
sso_service/database/: base.py  models.py  repository.py
sso_service/providers/: __init__.py  base.py  credentials.py  vk.py  yandex.py
